# GitOwl

./: PROJECT_BRAIN.md  README.md  pyproject.toml  vercel.json
.github/workflows/: gitowl-review.yml  publish.yml
api/: review.py
devguard/: comment.py
examples/: gitowl-review.yml
gitowl/: cli.py  comment.py  github_client.py
playground/web/src/: App.tsx  index.css
playground/web/src/components/: Setup.tsx
tests/: test_comment.py  test_config.py  test_pricing.py  test_providers.py  test_reviewer.py
